--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+---
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init: |
@@ -18,7 +19,6 @@ ports:
   - port: 5000
     onOpen: open-preview
 
-
 github:
   prebuilds:
     # enable for the master/default branch (defaults to true)
@@ -35,3 +35,13 @@ github:
     addBadge: false
     # add a label once the prebuild is ready to pull requests (defaults to false)
     addLabel: prebuilt-in-gitpod
+
+vscode:
+  extensions:
+    - EditorConfig.EditorConfig
+    - esbenp.prettier-vscode
+    - ms-python.python
+    - bradlc.vscode-tailwindcss
+    - rangav.vscode-thunder-client
+    - johnsoncodehk.vscode-typescript-vue-plugin
+    - johnsoncodehk.volar
