--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,7 @@ tasks:
       deactivate
       cd ..
 
-  - command: |
+    command: |
       sh run.sh
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
