--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,23 +1,31 @@
 ---
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: |
-      cd web
-      npm i
-      cd ../server
+  - name: backend
+    init: |
+      cd ./server
       python3 -v venv venv
       source venv/bin/activate
       pip install -r requirements.txt
       deactivate
-      cd ..
+    command: sh run.sh
+    openMode: split-right
+  
+  - name: backend
+    init: |
+      cd ./web
+      npm install
+    command: cd web && npm run dev
+    openMode: split-right
 
-    command: |
-      sh run.sh
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
   - port: 5000
-    onOpen: open-preview
+    onOpen: ignore
+  - port: 3000
+    onOpen: open-browser
+
 
 github:
   prebuilds:
