--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,14 +9,14 @@ tasks:
       pip install -r requirements.txt
       source deactivate
       cd ..
-    command: sh run.sh
+    command: /workspace/chief-plat/server && sh run.sh
     openMode: split-right
   
   - name: backend
     init: |
       cd ./web
       npm install
-    command: npm run dev
+    command: /workspace/chief-plat/web && npm run dev
     openMode: split-right
 
 
