:sparkles: start with testing

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ tasks:
   - name: backend
     init: |
       cd ./server
-      python3 -v venv venv
+      python3 -m venv venv
       source venv/bin/activate
       pip install -r requirements.txt
       source deactivate
