:sparkles: more tests

--- a/examples/test-app.yml
+++ b/examples/test-app.yml
@@ -1,5 +1,8 @@
 ---
 type: native # available: docker, docker-compose, native
+description: simple redis test app
+urls:
+  - http://localhost:6379
 containers:
   - test-app-redis
 start: |-
