--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ tasks:
       python3 -m venv venv
       source venv/bin/activate
       pip install -r requirements.txt
-    command: cd /workspace/chief-plat/server && sh run.sh
+    command: cd /workspace/chief-plat/server && ./run.sh
     openMode: split-right
   
   - name: backend
