--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,8 @@ tasks:
       python3 -m venv venv
       source venv/bin/activate
       pip install -r requirements.txt
+      cd ..
+      deactivate
     command: cd /workspace/chief-plat/server && ./run.sh
     openMode: split-right
   
