:recycle: :bug: replace fetch with axios

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "flowbite": "^1.3.4",
     "vue": "^3.2.31"
   },
